# src/internal/image/api/handlers/processing_handler.go
@@ -2,8 +2,8 @@ package handlers
 
 import (
 	"net/http"
+	"strconv"
 
-	"github.com/alielmi98/image-processing-service/di"
 	"github.com/alielmi98/image-processing-service/internal/image/api/dto"
 	"github.com/alielmi98/image-processing-service/internal/image/usecase"
 	"github.com/alielmi98/image-processing-service/pkg/config"
@@ -15,9 +15,9 @@ type ProcessingHandler struct {
 	usecase *usecase.ProcessingUsecase
 }
 
-func NewProcessingHandler(cfg *config.Config) *ProcessingHandler {
+func NewProcessingHandler(cfg *config.Config, usecase *usecase.ProcessingUsecase) *ProcessingHandler {
 	return &ProcessingHandler{
-		usecase: usecase.NewProcessingUseCase(cfg, di.GetProcessingRepository(cfg), di.GetMessageSender(cfg)),
+		usecase: usecase,
 	}
 }
 
@@ -45,5 +45,33 @@ func (h *ProcessingHandler) CreateProcessingJob(c *gin.Context) {
 		return
 	}
 
-	c.JSON(http.StatusCreated, helper.BaseHttpResponse{Result: response})
+	c.JSON(http.StatusCreated, helper.GenerateBaseResponse(response, true, 0))
+}
+
+// GetProcessingJobByID godoc
+// @Summary Get a processing job by ID
+// @Description Get a processing job by ID
+// @Tags Processing
+// @Accept json
+// @produces json
+// @param id path int true "Processing job ID"
+// @Success 200 {object} helper.BaseHttpResponse{result=dto.ProcessImageResponse} "Processing response"
+// @Failure 404 {object} helper.BaseHttpResponse "Not found"
+// @Router /v1/processing/{id} [get]
+// @Security AuthBearer
+func (h *ProcessingHandler) GetProcessingJobByID(c *gin.Context) {
+	id, _ := strconv.Atoi(c.Params.ByName("id"))
+	if id == 0 {
+		c.AbortWithStatusJSON(http.StatusNotFound,
+			helper.GenerateBaseResponse(nil, false, helper.ValidationError))
+		return
+	}
+	job, err := h.usecase.GetProcessingJobByID(c, id)
+	if err != nil {
+		c.AbortWithStatusJSON(helper.TranslateErrorToStatusCode(err),
+			helper.GenerateBaseResponseWithError(nil, false, helper.InternalError, err))
+		return
+	}
+
+	c.JSON(http.StatusOK, helper.GenerateBaseResponse(job, true, 0))
 }
